test/cli/test-mutating-policy/mutate-existing-secret-trigger-deployment-target/patched-target.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mutated: "true"
  name: test-deploy
  namespace: test-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
