test/cli/test-mutating-policy/mutate-existing-secret-trigger-deployment-target/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-existing-secret-trigger-deployment-target
policies:
- policy.yaml
resources:
- trigger.yaml
results:
- isMutatingPolicy: true
  kind: Deployment
  patchedResources: patched-target.yaml
  policy: mutate-existing-deployment-from-secret
  resources:
  - test-ns/test-deploy
  result: pass
targetResources:
- target.yaml
